--- a/src/app/components/list-vendedor/list-vendedor.component.html
+++ b/src/app/components/list-vendedor/list-vendedor.component.html
@@ -1,4 +1,5 @@
 <div>
+
   <div class='container'>
     <h2>Listado de vendedores</h2>
     <button routerLink='add' color='primary' mat-stroked-button>Agregar</button>
@@ -27,7 +28,7 @@
       </ng-container>
       <ng-container matColumnDef="fechaNacimiento" >
         <th mat-header-cell *matHeaderCellDef> Fecha Nacimiento</th>
-        <td mat-cell *matCellDef="let data">{{ data.fechaNacimiento }}</td>
+        <td mat-cell *matCellDef="let data">{{ date[data.id-1] }}</td>
       </ng-container>
       <ng-container matColumnDef="observaciones" >
         <th mat-header-cell *matHeaderCellDef> Observaciones</th>
