--- a/src/app/components/list-vendedor/list-vendedor.component.html
+++ b/src/app/components/list-vendedor/list-vendedor.component.html
@@ -28,7 +28,7 @@
       </ng-container>
       <ng-container matColumnDef="fechaNacimiento" >
         <th mat-header-cell *matHeaderCellDef> Fecha Nacimiento</th>
-        <td mat-cell *matCellDef="let data">{{ date[data.id-1] }}</td>
+        <td mat-cell *matCellDef="let data">{{ data.fechaNacimiento | date:'dd-MM-yyyy' }}</td>
       </ng-container>
       <ng-container matColumnDef="observaciones" >
         <th mat-header-cell *matHeaderCellDef> Observaciones</th>
